k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: front
  name: _APP_NAME_
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    app: _APP_NAME_
  type: ClusterIP
